(coq.theory
  (name MSWasm.iris.examples.plainWasm)
  (package coq-mswasm)
  (flags -w -notation-overridden -w -abstract-large-number -w -extraction-reserved-identifier -w -ambiguous-paths)
    (theories MSWasm MSWasm.iris.language.iris MSWasm.iris.language MSWasm.iris.helpers MSWasm.iris.host MSWasm.iris.logrel MSWasm.iris.logrel))